fix height 100% on mobile browser

--- a/src/psyche/style.css
+++ b/src/psyche/style.css
@@ -2,7 +2,10 @@
   position: relative;
   display: flex;
   flex-direction: column; 
-  height: 100%; 
+  height: 100vh;
+  height: -moz-available;
+  height: -webkit-fill-available;
+  height: fill-available;
 }
 
 .launch-button {
